@@ -9,8 +9,14 @@
 0 0
 1 1
 1 1
+0 0
+1 1
+1 1
 1 1
 0 0
 1 1
+1 1
+1 1
+0 0
 1 1
 1 1
